# PePuGame

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  turtle_racing.py
lib/pepugame/: __main__.py  finish_line.py  game.py  player.py  settings.py
