[metadata]
name = pepugame

[options]
include_package_data = True
python_requires = >= 3.10
setup_requires = 
    setuptools_scm
install_requires = 
    pygame >= 2.1.2
package_dir =
    = lib
packages = find:

[options.entry_points]
console_scripts = 
    pepugame = pepugame.__main__:main

[options.packages.find]
where = lib